--- a/src/app/modules/movies/components/movies-list/movies-list.component.html
+++ b/src/app/modules/movies/components/movies-list/movies-list.component.html
@@ -1,59 +1,23 @@
 <div class="card">
-    <p-dataView #dv [value]="products" [layout]="layout">
-        <ng-template pTemplate="header">
-            <div class="flex justify-content-end">
-                <p-dataViewLayoutOptions [layout]="layout"></p-dataViewLayoutOptions>
-            </div>
-        </ng-template>
-        <ng-template let-product pTemplate="list" let-products>
-            <div class="grid grid-nogutter">
-                <div class="col-12" *ngFor="let product of products; let first = first">
-                    <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4" [ngClass]="{ 'border-top-1 surface-border': !first }">
-                        <img class="w-9 sm:w-16rem xl:w-10rem shadow-2 block xl:block mx-auto border-round" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" />
-                        <div class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4">
-                            <div class="flex flex-column align-items-center sm:align-items-start gap-3">
-                                <div class="text-2xl font-bold text-900">{{ product.name }}</div>
-                                <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>
-                                <div class="flex align-items-center gap-3">
-                                    <span class="flex align-items-center gap-2">
-                                        <i class="pi pi-tag"></i>
-                                        <span class="font-semibold">{{ product.category }}</span>
-                                    </span>
-                                    <p-tag [value]="product.inventoryStatus" [severity]="getSeverity(product)"></p-tag>
-                                </div>
-                            </div>
-                            <div class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2">
-                                <span class="text-2xl font-semibold">{{ '$' + product.price }}</span>
-                                <button pButton icon="pi pi-shopping-cart" class="md:align-self-end mb-2 p-button-rounded" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></button>
-                            </div>
-                        </div>
+    <p-carousel [value]="movies" [numVisible]="4" [numScroll]="4" [circular]="true"
+        [responsiveOptions]="responsiveOptions" autoplayInterval="30000">
+        <ng-template let-movie pTemplate="item">
+            <div class="border-1 surface-border border-round m-2 text-center py-5 px-3 wrapper">
+                <div>
+                    <img src="https://image.tmdb.org/t/p/w200/{{ movie.poster_path }}" class="shadow-2 image" />
+                </div>
+                <div>
+                    <div class="flex align-items-center justify-content-center gap-2">
+                        <i class="pi pi-star-fill icon"></i>
+                        <h4>{{ movie.vote_average?.toFixed(1)}}</h4>
+                    </div>
+                    <h4 class="m-0 title">{{ movie.original_title }}</h4>
+                    <div class="flex align-items-center justify-content-center gap-2">
+                        <p-button icon="pi pi-bookmark-fill" label="Add to Watchlist" outlined="true"></p-button>
+                        <!-- <p-button icon="pi pi-eye" [rounded]="true" severity="secondary"></p-button> -->
                     </div>
                 </div>
             </div>
         </ng-template>
-        <ng-template let-product pTemplate="grid" let-products>
-            <div class="grid grid-nogutter">
-                <div class="col-12 sm:col-6 lg:col-12 xl:col-4 p-2" *ngFor="let product of products">
-                    <div class="p-4 border-1 surface-border surface-card border-round">
-                        <div class="flex flex-wrap align-items-center justify-content-between gap-2">
-                            <span class="flex align-items-center gap-2">
-                                <i class="pi pi-tag"></i>
-                                <span class="font-semibold">{{ product.category }}</span>
-                            </span>
-                            <p-tag [value]="product.inventoryStatus" [severity]="getSeverity(product)"></p-tag>
-                        </div>
-                        <div class="flex flex-column align-items-center gap-3 py-5">
-                            <img class="w-9 shadow-2 border-round" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" />
-                            <div class="text-2xl font-bold">{{ product.name }}</div>
-                            <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>
-                        </div>
-                        <div class="flex align-items-center justify-content-between">
-                            <span class="text-2xl font-semibold">{{ '$' + product.price }}</span>
-                            <button pButton icon="pi pi-shopping-cart" class="p-button-rounded" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </ng-template>
-    </p-dataView>
+    </p-carousel>
 </div>
