--- a/src/app/modules/header/components/header/header.component.html
+++ b/src/app/modules/header/components/header/header.component.html
@@ -1,4 +1,5 @@
 <p-toolbar>
+    <span routerLink="/" style="cursor:pointer">MoviesHub</span>
     <div class="p-toolbar-group-start">
         <p-splitButton icon="pi pi-bars" [model]="menuItems" class="mr-2"></p-splitButton>
     </div>
