--- a/src/app/modules/movies/components/movies-list/movies-list.component.scss
+++ b/src/app/modules/movies/components/movies-list/movies-list.component.scss
@@ -17,3 +17,10 @@
 .image {
     height: 300px;
 }
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full viewport height */
+}
