--- a/src/app/modules/movies/components/search-results/search-results.component.html
+++ b/src/app/modules/movies/components/search-results/search-results.component.html
@@ -5,23 +5,7 @@
 <ng-template #content>
     <div class="grid">
         <div *ngFor="let movie of paginatedMovies()" class="col-12 sm:col-6 lg:col-4 xl:col-3 p-2">
-            <div class="border-1 surface-border border-round text-center py-5 px-3 wrapper">
-                <div>
-                    <img src="https://image.tmdb.org/t/p/w200/{{ movie.poster_path }}" class="shadow-2 image" />
-                </div>
-                <div>
-                    <div class="flex align-items-center justify-content-center gap-2">
-                        <i class="pi pi-star-fill icon"></i>
-                        <h4>{{ movie.vote_average?.toFixed(1)}}</h4>
-                    </div>
-                    <h4 class="m-0 title">{{ movie.original_title }}</h4>
-                    <div class="flex align-items-center justify-content-center gap-2">
-                        <p-button icon="pi pi-info" [rounded]="true" severity="secondary"
-                            (click)="openDetails(movie)"></p-button>
-                        <p-button icon="pi pi-bookmark-fill" [rounded]="true"></p-button>
-                    </div>
-                </div>
-            </div>
+            <card-item [movie]="movie"></card-item>
         </div>
     </div>
 
