--- a/src/app/modules/header/components/header/header.component.html
+++ b/src/app/modules/header/components/header/header.component.html
@@ -10,7 +10,7 @@
         </span>
     </div>
     <div class="p-toolbar-group-end">
-        <p-button icon="pi pi-bookmark-fill" label="Watchlist" class="mr-2" outlined="true"></p-button>
+        <p-button icon="pi pi-bookmark-fill" label="Watchlist" class="mr-2" outlined="true" (onClick)="navigateToWatchlist()"></p-button>
         <p-splitButton label="Berina" icon="pi pi-user" [model]="profileItems"></p-splitButton>
     </div>
 </p-toolbar>
