--- a/src/app/modules/movies/components/card-item/card-item.component.html
+++ b/src/app/modules/movies/components/card-item/card-item.component.html
@@ -12,7 +12,7 @@
             <div class="flex align-items-center justify-content-center gap-2">
                 <p-button icon="pi pi-info" [rounded]="true" severity="secondary"
                     (click)="openDetails(movie)"></p-button>
-                <p-button icon="pi pi-bookmark-fill" [rounded]="true"></p-button>
+                <p-button icon="pi pi-bookmark-fill" [rounded]="true" (onClick)="addToWatchlist(movie.id)"></p-button>
             </div>
         </div>
     </div>
