notifications, fixes and loaders

--- a/src/app/modules/account/components/ratings/ratings.component.html
+++ b/src/app/modules/account/components/ratings/ratings.component.html
@@ -16,7 +16,7 @@
                     <th scope="col">Poster</th>
                     <th scope="col">Title</th>
                     <th scope="col">Description</th>
-                    <th scope="col">Your Rating</th>
+                    <th scope="col">Rating</th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-movie>
