--- a/src/app/modules/movies/components/movie-details/movie-details.component.scss
+++ b/src/app/modules/movies/components/movie-details/movie-details.component.scss
@@ -56,3 +56,10 @@
     height: 2rem;
     color: gold !important;
 }
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
